se agraga pagina como

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,35 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
+  <style>
+    .principal {
+      min-height: 600px;
+      font-size: 1.2em;
+      padding-left: 0px;
+      padding-right: 0px;
+
+    }
+
+    .compania {
+      background-color: #00aeeb;
+      color: white;
+      padding: 1rem;
+    }
+
+    .compania h2 {
+      color: white;
+    }
+
+    .mision {
+      padding: 1rem;
+    }
+
+    .mision h2 {
+      color: black;
+    }
+  </style>
+
+
   <title>123depósitos</title>
 </head>
 
